# webassembly-component-tutorial

./: .gitignore  README.md  TRAINING.md  scaffold-component.sh
adder/: Cargo.toml
adder/src/: lib.rs
calculator/: Cargo.toml
calculator/src/: bindings.rs  lib.rs
command/: Cargo.toml
command/src/: bindings.rs  main.rs
hello-world/: Cargo.toml
hello-world/src/: bindings.rs
hello-world/wit/: world.wit
subtractor/: Cargo.toml
subtractor/src/: bindings.rs  lib.rs
wit/calculator/: world.wit
wit/subtractor/: world.wit
